Replace avatar placeholder with profile image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-avatar">
-                    <div class="avatar-placeholder">AK</div>
+                    <img src="profile.jpeg" alt="Abhinav Kumar" class="avatar-img">
                 </div>
                 <div class="hero-decoration"></div>
             </div>
